fixed post method

--- a/nbs/2-send-data-to-api.ipynb
+++ b/nbs/2-send-data-to-api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "a0aa13a5",
    "metadata": {},
    "outputs": [],
@@ -12,91 +12,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "3b416d06",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'http://localhost:8002/api/events/'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "path = \"/api/events/\"\n",
-    "base_url = \"http://localhost:8002\"\n",
-    "endpoint = f\"{base_url}{path}\"\n",
-    "endpoint"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "3d26c71d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = {\"page\": \"/test+\"}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "9ac25eed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "3ec53aa2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'{\"page\": \"/test+\"}'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "json.dumps(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "c5121ff2",
+   "execution_count": 31,
+   "id": "53b946ea",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'date': 'Tue, 08 Jul 2025 19:08:44 GMT', 'server': 'uvicorn', 'content-length': '34', 'content-type': 'application/json'}\n",
+      "{'date': 'Tue, 08 Jul 2025 19:26:12 GMT', 'server': 'uvicorn', 'content-length': '57', 'content-type': 'application/json'}\n",
       "True\n",
-      "{'results': [{'id': 123}], 'count': 1} <class 'dict'>\n"
+      "{'id': 123, 'page': '/test+', 'description': 'my description'} <class 'dict'>\n"
      ]
     }
    ],
    "source": [
-    "headers = {\n",
-    "    \"Content-Type\": \"application/json\"\n",
-    "}\n",
+    "path = \"/api/events/\"\n",
+    "base_url = \"http://localhost:8002\"\n",
+    "create_endpoint = f\"{base_url}{path}\"\n",
     "\n",
-    "response = requests.post(endpoint, data=json.dumps(data), headers=headers)\n",
+    "response = requests.post(create_endpoint, json={\"page\": \"/test+\"})\n",
     "print(response.headers)\n",
     "print(response.ok)\n",
     "if response.ok:\n",
@@ -108,18 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "b9da4fa1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "detail_path = \"/api/events/12\"\n",
-    "detail_endpoint = f\"{base_url}{detail_path}\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "id": "0154e044",
    "metadata": {},
    "outputs": [
@@ -127,13 +51,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'date': 'Tue, 08 Jul 2025 19:09:44 GMT', 'server': 'uvicorn', 'content-length': '9', 'content-type': 'application/json'}\n",
+      "{'date': 'Tue, 08 Jul 2025 19:24:03 GMT', 'server': 'uvicorn', 'content-length': '47', 'content-type': 'application/json'}\n",
       "True\n",
-      "{'id': 12} <class 'dict'>\n"
+      "{'id': 12, 'page': '', 'description': 'hello world'} <class 'dict'>\n"
      ]
     }
    ],
    "source": [
+    "detail_path = \"/api/events/12\"\n",
+    "detail_endpoint = f\"{base_url}{detail_path}\"\n",
+    "\n",
     "headers = {\n",
     "    \"Content-Type\": \"application/json\"\n",
     "}\n",
