--- a/nbs/2-send-data-to-api.ipynb
+++ b/nbs/2-send-data-to-api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "a0aa13a5",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "53b946ea",
    "metadata": {},
    "outputs": [
@@ -20,9 +20,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'date': 'Tue, 08 Jul 2025 19:26:12 GMT', 'server': 'uvicorn', 'content-length': '57', 'content-type': 'application/json'}\n",
+      "{'date': 'Wed, 09 Jul 2025 09:12:57 GMT', 'server': 'uvicorn', 'content-length': '43', 'content-type': 'application/json'}\n",
       "True\n",
-      "{'id': 123, 'page': '/test+', 'description': 'my description'} <class 'dict'>\n"
+      "{'id': 123, 'page': '/test+', 'description': ''} <class 'dict'>\n"
      ]
     }
    ],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "0154e044",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'date': 'Tue, 08 Jul 2025 19:24:03 GMT', 'server': 'uvicorn', 'content-length': '47', 'content-type': 'application/json'}\n",
+      "{'date': 'Wed, 09 Jul 2025 09:12:57 GMT', 'server': 'uvicorn', 'content-length': '47', 'content-type': 'application/json'}\n",
       "True\n",
       "{'id': 12, 'page': '', 'description': 'hello world'} <class 'dict'>\n"
      ]
